INTYGFV-15941: Added missing converters in CredentialsForPersonConverter.