@@ -1,6 +1,5 @@
 package se.inera.intyg.intygproxyservice.integration.fakehsa.converters;
 
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 import se.inera.intyg.intygproxyservice.integration.api.authorization.model.CredentialsForPerson;
@@ -11,6 +10,8 @@ import se.inera.intyg.intygproxyservice.integration.fakehsa.repository.model.Par
 public class CredentialsForPersonConverter {
 
   private final RestrictionConverter restrictionConverter;
+  private final SpecialitiesConverter specialitiesConverter;
+  private final HealthCareProfessionalLicenceTypeConverter licenceTypeConverter;
 
   public CredentialsForPerson convert(ParsedHsaPerson parsedHsaPerson) {
     if (parsedHsaPerson == null) {
@@ -24,7 +25,17 @@ public class CredentialsForPersonConverter {
         .restrictions(
             parsedHsaPerson.getRestrictions().stream()
                 .map(restrictionConverter::convert)
-                .collect(Collectors.toList())
+                .toList()
+        )
+        .healthCareProfessionalLicenceSpeciality(
+            parsedHsaPerson.getSpecialities().stream()
+                .map(specialitiesConverter::convert)
+                .toList()
+        )
+        .healthCareProfessionalLicence(
+            parsedHsaPerson.getHealthCareProfessionalLicenceType().stream()
+                .map(licenceTypeConverter::convert)
+                .toList()
         )
         .build();
   }
